{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 535,
  "lineage": "bb56b86f-c914-c71e-9942-3e2519a27710",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:061039804626:security-group/sg-011688856b873c957",
            "description": "EKS Cluster SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011688856b873c957",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "Allow worker nodes to access cluster",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "matchfit-eks-sg",
            "name_prefix": "",
            "owner_id": "061039804626",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "matchfit-eks-sg",
              "Project": "team3"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "matchfit-eks-sg",
              "Project": "team3"
            },
            "timeouts": null,
            "vpc_id": "vpc-049ba0dbbebf854af"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route.internet_access",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table.this",
            "module.network.aws_route_table_association.public_assoc",
            "module.network.aws_route_table_association.this",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:061039804626:security-group/sg-00d00ceec3d99a93d",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d00ceec3d99a93d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow cluster to communicate with nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-011688856b873c957"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow node to node communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "matchfit-eks-node-sg",
            "name_prefix": "",
            "owner_id": "061039804626",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "matchfit-eks-node-sg",
              "Project": "team3"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "matchfit-eks-node-sg",
              "Project": "team3"
            },
            "timeouts": null,
            "vpc_id": "vpc-049ba0dbbebf854af"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.eks_cluster_sg",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route.internet_access",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table.this",
            "module.network.aws_route_table_association.public_assoc",
            "module.network.aws_route_table_association.this",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:061039804626:security-group/sg-064d2df79318b76fa",
            "description": "SSH access for EKS nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064d2df79318b76fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.200.0/22"
                ],
                "description": "Allow SSH from VPN Endpoint",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "matchfit-eks-node-ssh-sg",
            "name_prefix": "",
            "owner_id": "061039804626",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "matchfit-eks-node-ssh-sg",
              "Project": "team3"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "matchfit-eks-node-ssh-sg",
              "Project": "team3"
            },
            "timeouts": null,
            "vpc_id": "vpc-049ba0dbbebf854af"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route.internet_access",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table.this",
            "module.network.aws_route_table_association.public_assoc",
            "module.network.aws_route_table_association.this",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089a17680331e2b0d",
            "arn": "arn:aws:ec2:ap-northeast-2:061039804626:elastic-ip/eipalloc-089a17680331e2b0d",
            "association_id": "eipassoc-07151d99d6c482808",
            "domain": "vpc",
            "id": "eipalloc-089a17680331e2b0d",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0cec69c1bed2f8839",
            "private_dns": "ip-100-0-10-146.ap-northeast-2.compute.internal",
            "private_ip": "100.0.10.146",
            "public_dns": "ec2-15-164-54-224.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.54.224",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:061039804626:internet-gateway/igw-0d79fa61c713fc83d",
            "id": "igw-0d79fa61c713fc83d",
            "owner_id": "061039804626",
            "tags": {
              "Name": "matchfit-igw"
            },
            "tags_all": {
              "Name": "matchfit-igw"
            },
            "vpc_id": "vpc-049ba0dbbebf854af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089a17680331e2b0d",
            "association_id": "eipassoc-07151d99d6c482808",
            "connectivity_type": "public",
            "id": "nat-0ae62224b58620473",
            "network_interface_id": "eni-0cec69c1bed2f8839",
            "private_ip": "100.0.10.146",
            "public_ip": "15.164.54.224",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01b80ea32ceca09dd",
            "tags": {
              "Name": "matchfit-nat-gw"
            },
            "tags_all": {
              "Name": "matchfit-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d79fa61c713fc83d",
            "id": "r-rtb-032ff93deece87d361080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-032ff93deece87d36",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:061039804626:route-table/rtb-032ff93deece87d36",
            "id": "rtb-032ff93deece87d36",
            "owner_id": "061039804626",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d79fa61c713fc83d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "matchfit-public-rt"
            },
            "tags_all": {
              "Name": "matchfit-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-049ba0dbbebf854af"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:061039804626:route-table/rtb-0882f5fc0106c26fe",
            "id": "rtb-0882f5fc0106c26fe",
            "owner_id": "061039804626",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ae62224b58620473",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-049ba0dbbebf854af"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f73aa9436b5442c5",
            "route_table_id": "rtb-032ff93deece87d36",
            "subnet_id": "subnet-01b80ea32ceca09dd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01348ce69968e2f64",
            "route_table_id": "rtb-032ff93deece87d36",
            "subnet_id": "subnet-07ead580816205d0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b74807898a21594c",
            "route_table_id": "rtb-032ff93deece87d36",
            "subnet_id": "subnet-0dc8b9972f8c7145d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d9265c456920394",
            "route_table_id": "rtb-0882f5fc0106c26fe",
            "subnet_id": "subnet-09a406758275bfbeb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.this",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059828aa9da798821",
            "route_table_id": "rtb-0882f5fc0106c26fe",
            "subnet_id": "subnet-00f10b0cea348a8b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.this",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ceb1bf19934f07d",
            "route_table_id": "rtb-0882f5fc0106c26fe",
            "subnet_id": "subnet-04aad5ac72d8d1437"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.this",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:061039804626:subnet/subnet-09a406758275bfbeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "100.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a406758275bfbeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061039804626",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "matchfit-private-1"
            },
            "tags_all": {
              "Name": "matchfit-private-1"
            },
            "vpc_id": "vpc-049ba0dbbebf854af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:061039804626:subnet/subnet-00f10b0cea348a8b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "100.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f10b0cea348a8b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061039804626",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "matchfit-private-2"
            },
            "tags_all": {
              "Name": "matchfit-private-2"
            },
            "vpc_id": "vpc-049ba0dbbebf854af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:061039804626:subnet/subnet-04aad5ac72d8d1437",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "100.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04aad5ac72d8d1437",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061039804626",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "matchfit-private-3"
            },
            "tags_all": {
              "Name": "matchfit-private-3"
            },
            "vpc_id": "vpc-049ba0dbbebf854af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:061039804626:subnet/subnet-01b80ea32ceca09dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "100.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b80ea32ceca09dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061039804626",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "matchfit-public-1"
            },
            "tags_all": {
              "Name": "matchfit-public-1"
            },
            "vpc_id": "vpc-049ba0dbbebf854af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:061039804626:subnet/subnet-07ead580816205d0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "100.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ead580816205d0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061039804626",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "matchfit-public-2"
            },
            "tags_all": {
              "Name": "matchfit-public-2"
            },
            "vpc_id": "vpc-049ba0dbbebf854af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:061039804626:subnet/subnet-0dc8b9972f8c7145d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "100.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc8b9972f8c7145d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061039804626",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "matchfit-public-3"
            },
            "tags_all": {
              "Name": "matchfit-public-3"
            },
            "vpc_id": "vpc-049ba0dbbebf854af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:061039804626:vpc/vpc-049ba0dbbebf854af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "100.0.0.0/16",
            "default_network_acl_id": "acl-06c1ecfda4bbef5fa",
            "default_route_table_id": "rtb-03f9e791ec0cf21cb",
            "default_security_group_id": "sg-072836893e6fa00e1",
            "dhcp_options_id": "dopt-0ba27a0d0e074d9f5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-049ba0dbbebf854af",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f9e791ec0cf21cb",
            "owner_id": "061039804626",
            "tags": {
              "Name": "matchfit-vpc"
            },
            "tags_all": {
              "Name": "matchfit-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpn",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpn_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:061039804626:security-group/sg-0f025ef029d87fab6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f025ef029d87fab6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "192.168.200.0/22"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "matchfit-vpn-sg",
            "name_prefix": "",
            "owner_id": "061039804626",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-049ba0dbbebf854af"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}